alignment issues and spacing issues in mr record are fixed

--- a/src/app/business/modules/medicalrecord/medicalrecord.component.css
+++ b/src/app/business/modules/medicalrecord/medicalrecord.component.css
@@ -185,6 +185,7 @@ mat-footer-cell:first-of-type {
 
 
 
+
 @media(max-width: 600px) {
   .table-heading {
     font-size: 15px !important;
@@ -209,5 +210,13 @@ mat-footer-cell:first-of-type {
   .px-0 {
     padding-left: 0px !important;
     padding-right: 0px !important;
+  }
+
+  .no-need {
+    display: none !important;
+  }
+
+  .text-dark.text-center.my-3.pointer-cursor {
+    margin-bottom: 0px !important;
   }
 }
